welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:15: error: not found: value getLongueurMonde
    if(getX()== getLongueurMonde() -1 ){
                ^